Media Sessions Sent To Desktop

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
 
     //Coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    //Gson
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
