--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     //Gson
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.json:json:20220924'
+
 }
