--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,11 @@ dependencies {
     implementation 'org.json:json:20220924'
     // https://mvnrepository.com/artifact/androidx.lifecycle/lifecycle-viewmodel-compose
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk18on
+    implementation("org.bouncycastle:bcprov-jdk18on:1.75")
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk18on
+    implementation("org.bouncycastle:bcpkix-jdk18on:1.75")
+    // https://mvnrepository.com/artifact/org.bouncycastle/bcutil-jdk18on
+    implementation("org.bouncycastle:bcutil-jdk18on:1.75")
 }
