--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,9 @@ dependencies {
     implementation("org.bouncycastle:bcpkix-jdk18on:1.75")
     // https://mvnrepository.com/artifact/org.bouncycastle/bcutil-jdk18on
     implementation("org.bouncycastle:bcutil-jdk18on:1.75")
+
+    def media3Version = "1.1.1"
+    implementation("androidx.media3:media3-common:$media3Version")
+    implementation("androidx.media3:media3-exoplayer:$media3Version")
+    implementation("androidx.media3:media3-ui:$media3Version")
 }
